[package]
authors = ["j__r0d"]
name = "mc_screenshot_copy"
version = "1.1.0"
edition = "2021"
description = "A simple tool to copy screenshots from across all MultiMC instances to a specified folder."
repository = "https://github.com/jr0dsgarage/mc_screenshot_copy.git"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"